# inventory

./: .gitignore  Makefile  README.md  asgi.py  main.py  pyproject.toml  settings.py  urls.py  wsgi.py
inventory/: admin.py  forms.py  models.py
inventory/management/commands/: import_items.py
inventory/migrations/: 0001_initial.py  0002_user_ebay_refresh_token_user_ebay_token.py  0003_ebayitem.py  0004_ebayitem_state.py  0005_ebayitem_bought_date.py  0006_ebayitem_system_id.py  0007_ebayitem_bought_tracking_number.py  0008_ebayitem_system_title.py  0009_ebayitem_net_profit.py  0010_rename_net_profit_ebayitem_gross_profit.py  0011_alter_ebayitem_state.py  0012_systemid_alter_ebayitem_system_id.py
inventory/templates/: base_generic.html  home.html
inventory/templates/registration/: login.html  register.html
inventory/utils/: ebay.py
inventory/views/: __init__.py  auth.py  home.py
inventory/views/api/: __init__.py  ebay.py  item.py
static/: styles.css
